add experiment conditions for alliance phenotype file